--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=sys
-DB_NAME=sistema13
+DB_PASS=contraseña de la instancia de base de datos
+DB_NAME=Nombre de la base de datos
 
-GMAIL_USER=eber.solano@tecsup.edu.pe
-GMAIL_PASS=ennxcnaezpzquiwb
+GMAIL_USER=Correo de gmail
+GMAIL_PASS=Contraseña de aplicacion
 
 SESSION_SECRET=tu_secreto_aleatorio_aquí
